# operatingsystem

./: .gitignore  CMakeLists.txt  README.md  main.c
kernel/: executionContext.c  executionContext.h  memory.c  memory.h  opcodes.c  opcodes.h  processControlBlock.c  processControlBlock.h  scheduler.c  scheduler.h  semaphore.c  semaphore.h
loader/: fileloader.c  fileloader.h
programs/: Program1  SemaphoreTest  SemaphoreTestDoorman  countto177  multiply
util/: util.c  util.h
